0.6 (2017-??-??)
----------------

 * Configuring notifications through Trac's web admin system now requires
   TICKET_ADMIN only, not full TRAC_ADMIN.

0.5 (2013-11-21)
----------------

 * Notifications can now be configured through Trac's web admin system.

0.4 (2012-12-12)
----------------

 * Support for Trac 0.11.7

0.3 (2012-12-11)
----------------

 * Allow configuration of conditional notifications.
 * Provide `action` string in templates.

0.2 (2012-12-10)
----------------

 * Provide `old_values` dict in templates.
 * '*'-notifications are no longer triggered for @created actions.

0.1 (2012-12-09)
----------------

Everything is new!